# pkg/ocp-certificate-api/ocp-certificate-api.pb.validate.go
@@ -43,7 +43,7 @@ func (m *NewCertificate) Validate() error {
 
 	if m.GetUserId() <= 0 {
 		return NewCertificateValidationError{
-			field:  "UserID",
+			field:  "UserId",
 			reason: "value must be greater than 0",
 		}
 	}
@@ -134,14 +134,14 @@ func (m *Certificate) Validate() error {
 
 	if m.GetId() <= 0 {
 		return CertificateValidationError{
-			field:  "ID",
+			field:  "Id",
 			reason: "value must be greater than 0",
 		}
 	}
 
 	if m.GetUserId() <= 0 {
 		return CertificateValidationError{
-			field:  "UserID",
+			field:  "UserId",
 			reason: "value must be greater than 0",
 		}
 	}
@@ -989,3 +989,147 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = UpdateCertificateV1ResponseValidationError{}
+
+// Validate checks the field values on RemoveCertificateV1Request with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *RemoveCertificateV1Request) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	if m.GetCertificateId() <= 0 {
+		return RemoveCertificateV1RequestValidationError{
+			field:  "CertificateId",
+			reason: "value must be greater than 0",
+		}
+	}
+
+	return nil
+}
+
+// RemoveCertificateV1RequestValidationError is the validation error returned
+// by RemoveCertificateV1Request.Validate if the designated constraints aren't met.
+type RemoveCertificateV1RequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e RemoveCertificateV1RequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e RemoveCertificateV1RequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e RemoveCertificateV1RequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e RemoveCertificateV1RequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e RemoveCertificateV1RequestValidationError) ErrorName() string {
+	return "RemoveCertificateV1RequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e RemoveCertificateV1RequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sRemoveCertificateV1Request.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = RemoveCertificateV1RequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = RemoveCertificateV1RequestValidationError{}
+
+// Validate checks the field values on RemoveCertificateV1Response with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *RemoveCertificateV1Response) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	// no validation rules for Removed
+
+	return nil
+}
+
+// RemoveCertificateV1ResponseValidationError is the validation error returned
+// by RemoveCertificateV1Response.Validate if the designated constraints
+// aren't met.
+type RemoveCertificateV1ResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e RemoveCertificateV1ResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e RemoveCertificateV1ResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e RemoveCertificateV1ResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e RemoveCertificateV1ResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e RemoveCertificateV1ResponseValidationError) ErrorName() string {
+	return "RemoveCertificateV1ResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e RemoveCertificateV1ResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sRemoveCertificateV1Response.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = RemoveCertificateV1ResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = RemoveCertificateV1ResponseValidationError{}
